--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> skyChat - Realtime Node Socket.io Chat App</title>
-    <script defer src="https://a522-157-45-77-0.ngrok.io/socket.io/socket.io.js"></script>
+    <script defer src="https://chatserver-v1.herokuapp.com/socket.io/socket.io.js"></script>
     <script defer src="js/script.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <style>
